--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ main {
 	}
 
 .download {
-	text-align: center;
+	text-align: left;
 }
 
 .download-button {
@@ -72,22 +72,17 @@ main {
 
 footer {
 	text-align: center;
+	background-color: #333;
+	color: white;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
 }
 
 	footer h1 {
-		padding: 10px;
-		background-color: #333;
-		color: white;
-		position: fixed;
-		bottom: 0;
-		width: 100%;
+		padding: 6px;
 	}
 
 	footer p {
 		padding: 5px;
-		background-color: #333;
-		color: white;
-		position: fixed;
-		bottom: 0;
-		width: 100%;
 	}
