--- a/styles.css
+++ b/styles.css
@@ -71,11 +71,11 @@ main {
 	}
 
 footer {
-	text-align: center;
 	color: white;
 }
 
 	footer h1 {
+		text-align: center;
 		padding: 6px;
 		background-color: #333;
 		position: fixed;
@@ -84,6 +84,7 @@ footer {
 	}
 
 	footer p {
+		text-align: right;
 		padding: 5px;
 		background-color: #333;
 		position: fixed;
